// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createNextApiHandler > should return 400 for invalid JSON 1`] = `
"Expected ',' or '}' after property value in JSON at position 59 (line 1 column 60)

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidjsonerror/
Details: Expected ',' or '}' after property value in JSON at position 59 (line 1 column 60)
Version: 1.1.0.next-73"
`;

exports[`createNextApiHandler > should return 400 for invalid JSON-RPC request 1`] = `
"UnsupportedMethodError: Unknown method invalid_method

Docs: https://tevm.sh/reference/tevm/errors/classes/methodnotfounderror/
Version: 1.1.0.next-73"
`;

exports[`createNextApiHandler should return 400 for invalid JSON 1`] = `
"JSON Parse error: Expected '}'

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidjsonerror/
Details: JSON Parse error: Expected '}'
Version: 1.1.0.next-73"
`;

exports[`createNextApiHandler should return 400 for invalid JSON-RPC request 1`] = `
"UnsupportedMethodError: Unknown method invalid_method

Docs: https://tevm.sh/reference/tevm/errors/classes/methodnotfounderror/
Version: 1.1.0.next-73"
`;
